Bugzilla#113157 gmf_head cmahoney 051102 GMF Diagram Layer Public API Name Changes